fix navigation overflow

--- a/css/page-section.css
+++ b/css/page-section.css
@@ -7,6 +7,7 @@
   height: 9.6rem;
   padding: 0 4.8rem;
   background-color: var(--color-tint-1);
+  position: relative;
 }
 
 .nav__list {
